syntax = "proto3";

package fr.unice.polytech.soa.team.j.bluegalacticx.rocket;

option java_multiple_files = true;
option java_package = "fr.unice.polytech.soa.team.j.bluegalacticx.rocket.proto";

message RocketStatusRequest {
  enum EventType {
    IN_SERVICE = 0; DESTROYED = 1; AT_BASE = 2; IN_REPAIR = 3; DAMAGED = 4;
    DONED = 5;
  }
  EventType eventType = 1;
  string rocketId = 2;
}
